Sokoban: login dialog, embedded DB H2
etap 1

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,14 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.196</version>
+        </dependency>
+    </dependencies>
+
 </project>
